--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1> Car Enthusiast's Dream</h1>
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">Cars</a></li>
+            <li><a href="#">Car</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
      </header>
